--- a/pureengine.css
+++ b/pureengine.css
@@ -40,6 +40,37 @@ table.inputTable td.fixwidthhalf {
  color: #444444;
  list-style-type: none;
 }
+#idVisualData {
+    position: fixed;
+	top: 50%;
+	left: 50%;
+
+    border:2px solid #000000;
+    height: 200px;
+    
+    margin-left: -395px;
+    margin-top: -100px;
+	padding: 3px;
+    
+    width: 790px;
+    z-index: 9999999;
+	
+	background-color:#eeeeee;
+	text-align:center;
+}
+#idTableVisualData td {
+	 width: 112px;
+}
+#idVDclose {
+	display:inline-block;
+	border:1px solid #cccccc;
+	color:#cccccc;
+	background-color:#ffffff;
+	height:25px; width:25px; 
+	text-align:center; 
+	vertical-align:middle;
+	line-height:25px;
+}
 .inputSpecific {
 
 }
