--- a/pureengine.css
+++ b/pureengine.css
@@ -35,18 +35,15 @@ table.inputTable td.fixwidthhalf {
 #idTableShowMeHow {
 	height:200px;
 }
-#idjavascript, #idjavascript li,#idjavascript a,#idjavascript a:hover,#idjavascript a:link ,#idjavascript a:visited  {
- font-size:12px;
- color: #444444;
- list-style-type: none;
-}
-#idVisualData {
+
+#idPopUpDiv {
     position: fixed;
 	top: 50%;
 	left: 50%;
 
     border:2px solid #000000;
-    height: 200px;
+    height: 250px;
+	overflow: auto;
     
     margin-left: -395px;
     margin-top: -100px;
@@ -58,7 +55,7 @@ table.inputTable td.fixwidthhalf {
 	background-color:#eeeeee;
 	text-align:center;
 }
-#idTableVisualData td {
+.px112 {
 	 width: 112px;
 }
 #idVDclose {
