--- a/pureengine.css
+++ b/pureengine.css
@@ -102,6 +102,19 @@ table.inputTable td.fixwidthhalf {
 	margin-bottom:10px;
 	margin-top: 10px;
 }
+/* //http://stackoverflow.com/questions/28931791/jquery-how-to-grey-out-the-background-while-showing-the-loading-icon-over-it*/
+.overlay {
+    background: #eeeeee;  
+    display: none;        
+    opacity:0.8;
+    background-color:#ccc;
+    position:fixed;
+    width:100%;
+    height:100%;
+    top:0px;
+    left:0px;
+    z-index:1000;
+}
 .monthspan {
 	width:30px;
 	display:inline-block;
